--- a/trash/index.html
+++ b/trash/index.html
@@ -69,7 +69,7 @@
               <strong>{{yardSchedule.NAME}}</strong> - {{yardSchedule.SCHEDULE}}
             </div>
             <div class="well" v-if="streetSweep.DATE">
-              <h4><i class="fas fa-broom"></i> Street Sweeping</h4>
+              <h4><i class="fas fa-broom"></i> SWEEP Pickup</h4>
               <strong>{{streetSweep.DATE}}</strong> - {{streetSweep.NEIGHBORHOOD}}
             </div>
           </div>
