--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
     <title>vue-esri-parks-finder</title>
+    <style>
+      body {
+        background-color: #d1dcc0 !important;
+      }
+    </style>
   </head>
   <body>
     <noscript>
