--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,8 @@
   <body>
     <noscript>
       <strong
-        >We're sorry but vue-esri-parks-finder doesn't work properly without
-        JavaScript enabled. Please enable it to continue.</strong
+        >We're sorry but this app doesn't work properly without JavaScript
+        enabled. Please enable it to continue.</strong
       >
     </noscript>
     <div id="app"></div>
